Fix logo alignment

--- a/Views/Static/AboutUs/AboutUs.css
+++ b/Views/Static/AboutUs/AboutUs.css
@@ -26,3 +26,9 @@ ul.contents li {
     box-shadow: 0 0 6px rgba(0,0,0,.5);
     margin: 10px;
 }
+#clclogo {
+	margin: 0 auto;
+}
+#clclogo img {
+	float: none;
+}
